@@ -45,7 +45,7 @@ import static org.apache.parquet.schema.MessageTypeParser.parseMessageType;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verifyZeroInteractions;
+import static org.mockito.Mockito.verifyNoInteractions;
 
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
@@ -53,7 +53,6 @@ import com.google.common.primitives.Ints;
 import java.io.IOException;
 import java.io.Serializable;
 import java.math.BigInteger;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -288,7 +287,7 @@ public class DictionaryFilterTest {
 
   @SuppressWarnings("deprecation")
   private void testDictionaryEncodedColumnsV1() throws Exception {
-    Set<String> dictionaryEncodedColumns = new HashSet<String>(Arrays.asList(
+    Set<String> dictionaryEncodedColumns = new HashSet<String>(List.of(
         "binary_field",
         "single_value_field",
         "optional_single_value_field",
@@ -326,7 +325,7 @@ public class DictionaryFilterTest {
   }
 
   private void testDictionaryEncodedColumnsV2() throws Exception {
-    Set<String> dictionaryEncodedColumns = new HashSet<String>(Arrays.asList(
+    Set<String> dictionaryEncodedColumns = new HashSet<String>(List.of(
         "binary_field",
         "single_value_field",
         "optional_single_value_field",
@@ -732,7 +731,7 @@ public class DictionaryFilterTest {
         "Should never drop block using plain encoding",
         canDrop(notEq(plain, nElements + 10), ccmd, dictionaryStore));
 
-    verifyZeroInteractions(dictionaryStore);
+    verifyNoInteractions(dictionaryStore);
   }
 
   @Test
@@ -758,7 +757,7 @@ public class DictionaryFilterTest {
         "Should never drop block using plain encoding",
         canDrop(notEq(plain, nElements + 10), ccmd, dictionaryStore));
 
-    verifyZeroInteractions(dictionaryStore);
+    verifyNoInteractions(dictionaryStore);
   }
 
   @Test
