@@ -30,7 +30,6 @@ import static org.junit.Assert.assertTrue;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Random;
@@ -152,7 +151,7 @@ public class TestParquetReaderRandomAccess {
       super(path, buildSchema(), blockSize, pageSize, enableDictionary, true, version);
 
       this.random = new Random(seed);
-      this.randomGenerators = Arrays.asList(new SequentialLongGenerator(), new SequentialFlippingLongGenerator());
+      this.randomGenerators = List.of(new SequentialLongGenerator(), new SequentialFlippingLongGenerator());
 
       this.filter = FilterCompat.get(eq(longColumn("i64_flip"), 1L));
     }
